# ff-merge

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
ff_merge/: main.py
