[tool.poetry]
name = "ff-merge"
version = "0.1.0"
description = ""
authors = ["Peter Gaultney <petergaultney@gmail.com>"]
readme = "README.md"
packages = [{include = "ff_merge"}]

[tool.poetry.dependencies]
python = "^3.10"
pykml = "^0.2.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
ff-merge = 'ff_merge.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
