[project]
name = "ff-merge"
version = "0.1.0"
description = ""
authors = [{name="Peter Gaultney", email="petergaultney@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pykml>=0.2.0",
  "lxml>=4.9.3",
  "defopt>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "isort==5.12.0",
]

[project.scripts]
ff-merge = 'ff_merge.main:main'

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
